# osint-AI-framework

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  README.md  SEARCH_INFRASTRUCTURE.md  claude-prompts-used-for-planning.md  docker-compose.dev.yml  test_adapters_demo.py  test_meta_search_demo.py
.githooks/: pre-commit
backend/: README.md  pyproject.toml  settings.py  urls.py  wsgi.py
backend/app/: main.py
backend/app/routes/: analyze.py
backend/app/tests/: test_analysis_run.py  test_documentation_completeness.py  test_github_automation.py  test_search.py  test_shell_automation.py  test_subjects.py  test_sync_hooks.py  test_url_utils.py
backend/app/utils/: url.py
backend/apps/: __init__.py
backend/apps/investigations/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/investigations/migrations/: 0001_initial.py
backend/apps/search/: __init__.py  adapters.py  admin.py  apps.py  models.py  orchestrator.py  utils.py
backend/apps/search/migrations/: 0001_initial.py
backend/apps/search/tests/: __init__.py  test_adapters.py  test_models.py  test_orchestrator.py  test_utils.py
backend/apps/subjects/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
docs/: AI-ASSIGNMENT-SYSTEM-SUMMARY.md  AI-ASSIGNMENT-SYSTEM.md  FIRST-AI-ITERATION-RESULTS.md  PROFESSIONAL-CODE-STANDARDS.md  SEARCH_API.md  WHITEPAPER-AI-CONSTRAINT-METHODOLOGY.md  data-model.md  template-extraction-analysis.md  user-stories.md
frontend/: .env.example  .eslintrc.cjs  README.md  (+6 more)
(+116 files in other folders)
